--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,13 @@ log/
 .vscode/
 
 # vscode #
-# db.sqlite3
+media/
+
+# sqlite #
+db.sqlite3
+
+# migrations #
+**/migrations/
+
+# __pycache__ #
+**/__pycache__/
